# compliance-obligations-tracker

./: .gitignore  DECISIONS.md  README.md  registro-decisiones.md
backend/: docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/application/: errors.py
backend/src/application/dtos/: obligation_dto.py
backend/src/application/ports/: audit_repository.py  document_repository.py  obligation_repository.py
backend/src/application/use_cases/: attach_document.py  change_status.py  create_obligation.py  delete_obligation.py  get_obligation.py  list_obligations.py  update_obligation.py
backend/src/config/: logging.py  settings.py
backend/src/domain/entities/: audit_event.py  document.py  obligation.py
backend/src/domain/errors/: domain_errors.py
backend/src/domain/services/: overdue.py  state_machine.py  tax_id_masking.py
backend/src/domain/value_objects/: company_tax_id.py  obligation_type.py  status.py
backend/src/infrastructure/database/: bootstrap.py  session.py
backend/src/infrastructure/database/models/: audit_model.py  document_model.py  obligation_model.py
backend/src/infrastructure/repositories/: postgres_audit_repository.py  postgres_document_repository.py  postgres_obligation_repository.py
backend/src/interfaces/http/: dependencies.py
backend/src/interfaces/http/errors/: http_errors.py
backend/src/interfaces/http/mappers/: obligation_mapper.py
backend/tests/integration/: conftest.py  test_obligation_api.py  test_obligation_repository.py
backend/tests/unit/domain/: test_domain_rules.py
frontend/: .gitignore  (+4 more)
(+25 files in other folders)
